# vulkanBase

./: .gitignore  Makefile  README.md  meson.build  vsupp
shaders/: mesh.frag  mesh.vert
srcs/: define.hpp
srcs/engine/: engine.cpp  engine.hpp
srcs/engine/camera/: Camera.cpp  Camera.hpp
srcs/engine/inputs/: InputManager.cpp  InputManager.hpp  Key.cpp  Key.hpp  Mouse.cpp  Mouse.hpp
srcs/engine/mesh/: Mesh.hpp  Vertex.cpp  Vertex.hpp  VertexPos.cpp  VertexPos.hpp
srcs/engine/shader/: Shader.cpp  Shader.hpp
srcs/engine/textures/: TextureManager.cpp  TextureManager.hpp
srcs/engine/vulkan/: VulkanCommandPool.cpp  VulkanCommandPool.hpp  VulkanContext.cpp  VulkanContext.hpp  VulkanUtils.cpp  VulkanUtils.hpp
srcs/engine/window/: Window.cpp  Window.hpp
srcs/program/: main.cpp  shaderStruct.hpp
srcs/program/loop/: computation.cpp  draw.cpp  events.cpp  init.cpp  loop.hpp
srcs/program/parsing/: string.cpp  string.hpp
subprojects/: libgmath.wrap
